Blissify: update icons
*apparently icons on every submenu is a overkill !!!

Change-Id: Ide9b054f52afd2d026c245d6bba2173eec5eb0bc

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -27,11 +27,11 @@
     <!-- LockScreen Clocks -->
     <PreferenceCategory
         android:key="lockscreen_clock_category"
+        android:icon="@drawable/ic_clock"
         android:title="@string/lockscreen_clockdate_category">
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lockscreen_clock_selection"
-        android:icon="@drawable/ic_clock"
         android:title="@string/lockscreen_clock_title"
         android:dialogTitle="@string/lockscreen_clock_dialog_title"
         android:entries="@array/lockscreen_clock_selection_entries"
@@ -40,7 +40,6 @@
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lock_clock_font_style"
-        android:icon="@drawable/ic_clock"
         android:title="@string/clock_font_style_title"
         android:entries="@array/font_style_entries"
         android:entryValues="@array/font_style_values"
@@ -70,7 +69,6 @@
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lock_date_font_style"
-        android:icon="@drawable/ic_clock"
         android:title="@string/date_font_style_title"
         android:entries="@array/font_style_entries"
         android:entryValues="@array/font_style_values"
@@ -89,21 +87,34 @@
     <!-- LockScreen Items -->
     <PreferenceCategory
         android:key="lockscreen_items_category"
+        android:icon="@drawable/ic_ui_options"
         android:title="@string/lockscreen_items_category" >
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
+        android:key="lockscreen_enable_power_menu"
+        android:title="@string/lockscreen_enable_power_menu_title"
+        android:summary="@string/lockscreen_enable_power_menu_summary"
+        android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_show_status_bar"
-        android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/lockscreen_show_status_bar_title"
         android:summary="@string/lockscreen_show_status_bar_summary"
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_lock_icon"
-        android:icon="@drawable/ic_prevent_accidental_wakeup"
         android:title="@string/lockscreen_lock_icon_title"
         android:summary="@string/lockscreen_lock_icon_summary"
         android:defaultValue="true" />
+
+    </PreferenceCategory>
+
+    <!-- LockScreen Shortcuts -->
+    <PreferenceCategory
+        android:key="lockscreen_shortcuts_category"
+        android:icon="@drawable/ic_shortcuts"
+        android:title="@string/lockscreen_shortcuts_category_title" >
 
     <Preference
          android:title="@string/lockscreen_shortcuts_title"
@@ -117,18 +128,17 @@
     <!-- FOD icon picker -->
     <PreferenceCategory
         android:key="fod_icon_picker"
+        android:icon="@drawable/ic_force_fp_authentication"
         android:title="@string/fod_icon_picker_title" >
 
     <Preference
         android:key="fod_icon_picker_category"
-        android:icon="@drawable/ic_force_fp_authentication"
         android:title="@string/fod_icon_picker_title"
         android:summary="@string/fod_icon_picker_summary"
         android:fragment="com.blissroms.blissify.fragments.lockscreen.FODIconPickerFragment" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="fod_icon_wallpaper_color"
-        android:icon="@drawable/ic_force_fp_authentication"
         android:title="@string/fod_wallpaper_color"
         android:summary="@string/fod_wallpaper_color_summary"
         android:defaultValue="false" />
@@ -150,25 +160,23 @@
     <!-- Lockscreen Charging -->
     <PreferenceCategory
         android:key="lockscreen_charging_category"
+        android:icon="@drawable/ic_lockscreen_charging_info"
         android:title="@string/lockscreen_charging_category" >
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_charging_animation"
-        android:icon="@drawable/ic_lockscreen_charging_info"
         android:title="@string/lockscreen_charging_animation_title"
         android:summary="@string/lockscreen_charging_animation_summary"
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
-        android:icon="@drawable/ic_lockscreen_charging_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="wireless_charging_animation"
-        android:icon="@drawable/ic_blissify_misc"
         android:title="@string/wireless_charging_animation_title"
         android:summary="@string/wireless_charging_animation_summary"
         android:defaultValue="false" />
@@ -178,78 +186,83 @@
     <!-- Lockscreen Wake -->
     <PreferenceCategory
         android:key="lockscreen_wake_category"
+        android:icon="@drawable/ic_wake_on_plug"
         android:title="@string/lockscreen_wake_category" >
-
-    <com.bliss.support.preferences.GlobalSettingSwitchPreference
-        android:key="lockscreen_enable_power_menu"
-        android:icon="@drawable/ic_power"
-        android:title="@string/lockscreen_enable_power_menu_title"
-        android:summary="@string/lockscreen_enable_power_menu_summary"
-        android:defaultValue="true" />
 
     <lineageos.preference.LineageGlobalSettingSwitchPreference
         android:key="wake_when_plugged_or_unplugged"
-        android:icon="@drawable/ic_wake_on_plug"
         android:title="@string/wake_when_plugged_or_unplugged_title"
         android:summary="@string/wake_when_plugged_or_unplugged_summary"
         android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
 
+    </PreferenceCategory>
+
+    <!-- Lockscreen FP Wake -->
+    <PreferenceCategory
+        android:key="lockscreen_fp_unlock"
+        android:icon="@drawable/ic_force_fp_authentication"
+        android:title="@string/lockscreen_wake_fp_category" >
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="fp_unlock_keystore"
+        android:title="@string/fp_unlock_keystore_title"
+        android:summary="@string/fp_unlock_keystore_summary"
+        android:defaultValue="false" />
+
     <lineageos.preference.LineageSystemSettingSwitchPreference
         android:key="proximity_on_wake"
-        android:icon="@drawable/ic_prevent_accidental_wakeup"
         android:title="@string/proximity_wake_title"
         android:summary="@string/proximity_wake_summary"
         android:defaultValue="false"
         lineage:requiresConfig="@*lineageos.platform:bool/config_proximityCheckOnWake" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="fp_unlock_keystore"
-        android:icon="@drawable/ic_force_fp_authentication"
-        android:title="@string/fp_unlock_keystore_title"
-        android:summary="@string/fp_unlock_keystore_summary"
-        android:defaultValue="false" />
 
     </PreferenceCategory>
 
     <!-- Lockscreen Media -->
     <PreferenceCategory
         android:key="lockscreen_media_category"
+        android:icon="@drawable/ic_display_media_cover_art"
         android:title="@string/lockscreen_media_category" >
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="lockscreen_media_metadata"
-        android:icon="@drawable/ic_display_media_cover_art"
         android:title="@string/lockscreen_media_art_title"
         android:defaultValue="true" />
 
      <com.bliss.support.preferences.SecureSettingListPreference
         android:key="lockscreen_albumart_filter"
-        android:icon="@drawable/ic_display_media_cover_art"
         android:title="@string/lockscreen_albumart_filter_title"
         android:entries="@array/lockscreen_albumart_filter_entries"
         android:entryValues="@array/lockscreen_albumart_filter_values"
         android:dependency="lockscreen_media_metadata"
         android:defaultValue="0" />
+    </PreferenceCategory>
+
+    <!-- Lockscreen Media Blur -->
+    <PreferenceCategory
+        android:key="lockscreen_media_category"
+        android:icon="@drawable/ic_media_art_blur"
+        android:title="@string/lockscreen_media_blur_category" >
 
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="lockscreen_media_blur"
-        android:icon="@drawable/ic_media_art_blur"
         android:title="@string/lockscreen_media_blur_title"
         android:summary="@string/lockscreen_media_blur_summary"
         android:max="2500"
         settings:min="1"
         android:dependency="lockscreen_media_metadata"
         android:persistent="false" />
+
     </PreferenceCategory>
 
     <!-- Lockscreen Visualizer -->
     <PreferenceCategory
         android:key="lockscreen_visualizer_category"
+        android:icon="@drawable/ic_music_visualizer"
         android:title="@string/lockscreen_visualizer_category" >
 
     <Preference
         android:key="lockscreen_visualizer"
-        android:icon="@drawable/ic_music_visualizer"
         android:title="@string/music_visualizer_title"
         android:summary="@string/music_visualizer_summary"
         android:fragment="com.blissroms.blissify.fragments.lockscreen.LockScreenVisualizer" />
@@ -259,11 +272,11 @@
     <!-- Lockscreen Weather -->
     <PreferenceCategory
         android:key="lockscreen_weather_category"
+        android:icon="@drawable/ic_weather"
         android:title="@string/lock_screen_weather_category" >
 
     <PreferenceScreen
         android:key="weather_option"
-        android:icon="@drawable/ic_weather"
         android:title="@string/weather_title"
         android:summary="@string/weather_config_title"
         android:fragment="com.blissroms.blissify.fragments.lockscreen.Weather" />
