Blissify: Add settings to relax device ID access restrictions [2/2]
Change-Id: I641b20080e94ea8e214ec04bc46ece0eba2fa9ab
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -263,4 +263,17 @@
 
     </PreferenceCategory>
 
+    <!-- Disable device identifier restrictions -->
+    <PreferenceCategory
+        android:key="priv_identifier_key"
+        android:title="@string/device_identifier_access_restrictions_title"
+        android:icon="@drawable/ic_system">
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
+        android:key="privileged_device_identifier_check_relaxed"
+        android:title="@string/device_identifier_access_restrictions_title"
+        android:summary="@string/device_identifier_access_restrictions_summary" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
