--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -174,7 +174,7 @@
         android:key="lockscreen_charging_animation"
         android:title="@string/lockscreen_charging_animation_title"
         android:summary="@string/lockscreen_charging_animation_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
