--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -157,7 +157,7 @@
         android:icon="@drawable/ic_lockscreen_charging_info"
         android:title="@string/lockscreen_charging_animation_title"
         android:summary="@string/lockscreen_charging_animation_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
