--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -977,6 +977,19 @@
         <item>@string/font_googlesans</item>
         <item>@string/font_oneplusslate</item>
         <item>@string/font_samsungone</item>
+        <item>@string/font_comfortaa</item>
+        <item>@string/font_exotwo</item>
+        <item>@string/font_storopia</item>
+        <item>@string/font_ubuntu</item>
+        <item>@string/font_nokiapure</item>
+        <item>@string/font_fifa2018</item>
+        <item>@string/font_roadrage</item>
+        <item>@string/font_20seven</item>
+        <item>@string/font_cocon</item>
+        <item>@string/font_quando</item>
+        <item>@string/font_grandhotel</item>
+        <item>@string/font_redressed</item>
+        <item>@string/font_sanfransisco</item>
     </string-array>
 
     <string-array name="font_style_values" translatable="false">
@@ -1018,6 +1031,19 @@
         <item>35</item>
         <item>36</item>
         <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
+        <item>41</item>
+        <item>42</item>
+        <item>43</item>
+        <item>44</item>
+        <item>45</item>
+        <item>46</item>
+        <item>47</item>
+        <item>48</item>
+        <item>49</item>
+        <item>50</item>
     </string-array>
 
     <!-- QS battery style  -->
