--- a/res/xml/blissify_pixel_gestures.xml
+++ b/res/xml/blissify_pixel_gestures.xml
@@ -18,7 +18,7 @@
 
     <Preference
         android:key="active_edge_category"
-        android:icon="@drawable/ic_bliss_active_edge"
+        android:icon="@drawable/ic_activeedge"
         android:title="@string/active_edge_title"
         android:summary="@string/active_edge_summary"
         android:fragment="com.blissroms.blissify.fragments.gestures.ActiveEdge"
