--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -227,6 +227,12 @@
         android:title="@string/tile_options"
         android:icon="@drawable/ic_blissify_qs">
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_panel_bg_use_new_tint"
+        android:title="@string/qs_bg_use_new_tint"
+        android:summary="@string/qs_bg_use_new_tint_summary"
+        android:defaultValue="false" />
+
     <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="quick_settings_vibrate"
         android:title="@string/quick_settings_vibrate_title"
