--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1230,4 +1230,8 @@
     <string name="device_identifier_access_restrictions_title">Disable device identifier restrictions</string>
     <!-- Summary for the new device identifier access restrictions -->
     <string name="device_identifier_access_restrictions_summary">Disable the new access restrictions for device identifiers</string>
+
+    <!-- QS Panel MIUI style brightness slider -->
+    <string name="brightness_slider_qs_unexpanded">MIUI style brightness slider (testing)</string>
+    <string name="brightness_slider_qs_unexpanded_summary">Shows brightness slider below qs panel</string>
 </resources>
