--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1240,4 +1240,7 @@
     <string name="device_identifier_access_restrictions_title">Disable device identifier restrictions</string>
     <!-- Summary for the new device identifier access restrictions -->
     <string name="device_identifier_access_restrictions_summary">Disable the new access restrictions for device identifiers</string>
+
+    <!-- Themes -->
+    <string name="aosp_themeing_title">Aosp Themeing</string>
 </resources>
