--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -21,4 +21,26 @@
         android:key="bliss_header"
         android:layout="@layout/themes_header" />
 
+    <PreferenceCategory
+        android:key="aosp_themeing"
+        android:title="@string/aosp_themeing_title">
+
+        <ListPreference
+            android:key="android.theme.customization.accent_color"
+            android:title="@string/theme_customization_accent_color_title"/>
+        <ListPreference
+            android:key="android.theme.customization.primary_color"
+            android:title="@string/theme_customization_primary_color_title"/>
+        <ListPreference
+            android:key="android.theme.customization.font"
+            android:title="@string/theme_customization_font_title"/>
+        <ListPreference
+            android:key="android.theme.customization.adaptive_icon_shape"
+            android:title="@string/theme_customization_icon_shape_title"/>
+        <ListPreference
+            android:key="android.theme.customization.icon_pack.android"
+            android:title="@string/theme_customization_sysui_icon_title"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
