--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -16,4 +16,26 @@
     android:key="themes_category"
     android:title="@string/blissify_themes_title">
 
+    <PreferenceCategory
+        android:key="aosp_themeing"
+        android:title="@string/aosp_themeing_title">
+
+        <ListPreference
+            android:key="android.theme.customization.accent_color"
+            android:title="@string/theme_customization_accent_color_title"/>
+        <ListPreference
+            android:key="android.theme.customization.primary_color"
+            android:title="@string/theme_customization_primary_color_title"/>
+        <ListPreference
+            android:key="android.theme.customization.font"
+            android:title="@string/theme_customization_font_title"/>
+        <ListPreference
+            android:key="android.theme.customization.adaptive_icon_shape"
+            android:title="@string/theme_customization_icon_shape_title"/>
+        <ListPreference
+            android:key="android.theme.customization.icon_pack.android"
+            android:title="@string/theme_customization_sysui_icon_title"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
