AoD notification pulse timeout option: Added some lower timeouts. Also added missing German translations.
Change-Id: I49fbf07119215bee18c85ab2525f2c9cd37ab4ed

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1206,6 +1206,11 @@
 
     <string-array name="ambient_notification_light_timeout_entries" translatable="false">
         <item>@string/entry_infinite</item>
+        <item>@string/entry_ten_seconds</item>
+        <item>@string/entry_twenty_seconds</item>
+        <item>@string/entry_thirty_seconds</item>
+        <item>@string/entry_one_minute</item>
+        <item>@string/entry_two_minute</item>
         <item>@string/entry_five_minute</item>
         <item>@string/entry_ten_minute</item>
         <item>@string/entry_fifteen_minute</item>
@@ -1215,6 +1220,11 @@
 
     <string-array name="ambient_notification_light_timeout_values" translatable="false">
         <item>0</item>
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
         <item>300</item>
         <item>600</item>
         <item>900</item>
