--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1250,9 +1250,12 @@
     <!-- Pulse Timeout -->
     <string name="ambient_notification_light_timeout_title">Timeout for light pulse</string>
     <string name="entry_infinite">Infinite</string>
+    <string name="entry_thirty_seconds">30 seconds</string>
+    <string name="entry_one_minute">1 minute</string>
+    <string name="entry_two_minute">2 minutes</string>
     <string name="entry_five_minute">5 minutes</string>
     <string name="entry_ten_minute">10 minutes</string>
+    <string name="entry_fifteen_minute">15 minutes</string>
     <string name="entry_thirty_minute">30 minutes</string>
     <string name="entry_sixty_minute">60 minutes</string>
-    <string name="entry_fifteen_minute">15 minutes</string>
 </resources>
