--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1866,11 +1866,13 @@
     <string-array name="theme_type_titles">
         <item>@string/theme_type_default</item>
         <item>@string/theme_type_solarized_dark</item>
+        <item>@string/theme_type_pitchblack</item>
     </string-array>
 
     <string-array name="theme_type_values">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
 </resources>
