Themes: Add PitchBlack Theme [3/3]
Change-Id: I8205dd185c266b8feae70b5e3ffe8ff8e1799c7b

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1591,6 +1591,7 @@
     <string name="theme_type_title">System theme</string>
     <string name="theme_type_summary">Select theme</string>
     <string name="theme_type_light">Light</string>
-    <string name="theme_type_pitch_black">Pitch black</string>
+    <string name="theme_type_pitch_black">Google Dark</string>
     <string name="theme_type_solarized_dark">Solarized dark</string>
+    <string name="theme_type_pitchblack">Pitch black</string>
 </resources>
