--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1651,12 +1651,14 @@
         <item>@string/theme_type_light</item>
         <item>@string/theme_type_pitch_black</item>
         <item>@string/theme_type_solarized_dark</item>
+        <item>@string/theme_type_pitchblack</item>
     </string-array>
 
     <string-array name="theme_type_values">
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
 </resources>
