--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1256,4 +1256,8 @@
     <!-- ANBI -->
     <string name="anbi_title">Accidental touch</string>
     <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
+
+    <!-- Navbar -->
+    <string name="navbar_visibility">Navigation bar</string>
+    <string name="navbar_visibility_summary">Toggle navigation bar visibility</string>
 </resources>
