Blissify: Add screenshot type option for Longshot [2/2]
Change-Id: I06c869b2b6378c63a6b1dcc9bc1c21e805bc3899

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -955,6 +955,7 @@
     <string name="screenshot_type_title">Screenshot type</string>
     <string name="screenshot_type_fullscreen">Full</string>
     <string name="screenshot_type_partial">Partial</string>
+    <string name="screenshot_type_fullscreen_longshot">Take fullscreen with extended screenshots</string>
 
     <!-- Sensor block per-package -->
     <string name="sensor_block_title">Sensor block per-package</string>
