--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -41,6 +41,14 @@
             android:summary="@string/pulse_ambient_light_summary"
             android:defaultValue="false" />
 
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="pulse_ambient_light_layout"
+            android:title="@string/pulse_ambient_light_layout_title"
+            android:entries="@array/pulse_ambient_light_layout_entries"
+            android:entryValues="@array/pulse_ambient_light_layout_values"
+            android:defaultValue="0"
+            android:dependency="pulse_ambient_light" />
+
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="pulse_ambient_light_pulse_for_all"
             android:title="@string/pulse_ambient_light_pulse_for_all_title"
