--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -26,6 +26,12 @@
         android:key="bliss_header"
         android:layout="@layout/buttons_header" />
 
+    <Preference
+        android:key="navigation_pref"
+        android:title="@string/navbar_visibility"
+        android:summary="@string/navbar_visibility_summary"
+        android:fragment="com.blissroms.blissify.fragments.buttons.Navigation"/>
+
     <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="hardware_keys_disable"
         android:title="@string/hwkeys_disabled_title"
