Blissify: Recognizing fingerprint animation [2/2]

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1248,4 +1248,8 @@
     <string name="theming_title">Styles &amp; Wallpapers</string>
     <string name="theme_select_title">Themes</string>
     <string name="theme_select_summary">Browse and select installed themes</string>
+
+    <!-- FOD animations -->
+    <string name="fod_recog_animation">FOD recognizing animation</string>
+    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
 </resources>
