--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1249,7 +1249,6 @@
     <string name="theme_select_title">Themes</string>
     <string name="theme_select_summary">Browse and select installed themes</string>
 
-    <!-- Disable HW keys -->
     <string name="hwkeys_disabled_title">Disable HW keys</string>
     <string name="hwkeys_disabled_summary">Enabling this will disable hardware keys for navigation</string>
 
@@ -1278,4 +1277,8 @@
     <!-- Alert Slider Notifications (OnePlus devices) -->
     <string name="alert_slider_notifications_title">Alert slider notifications</string>
     <string name="alert_slider_notifications_summary">Display notification when changing alert slider position</string>
+
+    <!-- FOD animations -->
+    <string name="fod_recog_animation">FOD recognizing animation</string>
+    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
 </resources>
