--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1234,13 +1234,17 @@
 
     <!-- FOD Recognizing fingerprint animations -->
     <string-array name="fod_recog_animation_entries" translatable="false">
-        <item>@string/fod_recog_animation_normal</item>
-        <item>@string/fod_recog_animation_aod</item>
-        <item>@string/fod_recog_animation_light</item>
-        <item>@string/fod_recog_animation_pop</item>
-        <item>@string/fod_recog_animation_pulse</item>
-        <item>@string/fod_recog_animation_pulse_white</item>
-        <item>@string/fod_recog_animation_rhythm</item>
+        <item>@string/fod_recog_animation_miui_normal</item>
+        <item>@string/fod_recog_animation_miui_aod</item>
+        <item>@string/fod_recog_animation_miui_light</item>
+        <item>@string/fod_recog_animation_miui_pop</item>
+        <item>@string/fod_recog_animation_miui_pulse</item>
+        <item>@string/fod_recog_animation_miui_pulse_white</item>
+        <item>@string/fod_recog_animation_miui_rhythm</item>
+        <item>@string/fod_recog_animation_op_cosmos</item>
+        <item>@string/fod_recog_animation_op_mclaren</item>
+        <item>@string/fod_recog_animation_op_stripe</item>
+        <item>@string/fod_recog_animation_op_wave</item>
     </string-array>
 
     <string-array name="fod_recog_animation_values" translatable="false">
@@ -1251,5 +1255,9 @@
         <item>4</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
     </string-array>
 </resources>
