--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1279,15 +1279,18 @@
     <string name="alert_slider_notifications_summary">Display notification when changing alert slider position</string>
 
     <!-- FOD animations -->
-    <string name="fod_recog_animation">FOD recognizing animation</string>
+    <string name="fod_recog_animation">Recognizing animation</string>
     <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
-    <string name="fod_recog_animation_picker_title">FOD recognizing animation picker</string>
-    <string name="fod_recog_animation_picker_summary">Choose your favorite recognizing animation</string>
-    <string name="fod_recog_animation_normal">Normal</string>
-    <string name="fod_recog_animation_aod">AOD</string>
-    <string name="fod_recog_animation_light">Light</string>
-    <string name="fod_recog_animation_pop">Pop</string>
-    <string name="fod_recog_animation_pulse">Pulse</string>
-    <string name="fod_recog_animation_pulse_white">Pulse (White)</string>
-    <string name="fod_recog_animation_rhythm">Rhythm</string>
+    <string name="fod_recog_animation_effect_title">Recognizing animation effect</string>
+    <string name="fod_recog_animation_miui_normal">MIUI default</string>
+    <string name="fod_recog_animation_miui_aod">AOD</string>
+    <string name="fod_recog_animation_miui_light">Light</string>
+    <string name="fod_recog_animation_miui_pop">Pop</string>
+    <string name="fod_recog_animation_miui_pulse">Pulse</string>
+    <string name="fod_recog_animation_miui_pulse_white">Pulse (White)</string>
+    <string name="fod_recog_animation_miui_rhythm">Rhythm</string>
+    <string name="fod_recog_animation_op_cosmos">Cosmos</string>
+    <string name="fod_recog_animation_op_mclaren">McLaren</string>
+    <string name="fod_recog_animation_op_stripe">Stripe</string>
+    <string name="fod_recog_animation_op_wave">Wave</string>
 </resources>
