--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1221,6 +1221,7 @@
         <item>@string/fod_recog_animation_pureview_future</item>
         <item>@string/fod_recog_animation_pureview_halo_ring</item>
         <item>@string/fod_recog_animation_pureview_molecular</item>
+        <item>@string/fod_recog_animation_bluefirework</item>
     </string-array>
 
     <string-array name="fod_recog_animation_values" translatable="false">
@@ -1239,5 +1240,6 @@
         <item>12</item>
         <item>13</item>
         <item>14</item>
+        <item>15</item>
     </string-array>
 </resources>
