--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1277,4 +1277,5 @@
     <string name="fod_recog_animation_pureview_future">Future</string>
     <string name="fod_recog_animation_pureview_halo_ring">Halo Ring</string>
     <string name="fod_recog_animation_pureview_molecular">Molecular</string>
+    <string name="fod_recog_animation_bluefirework">Blue Fireworks</string>
 </resources>
