--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -197,6 +197,14 @@
         android:title="@string/notifications_vib_category" 
         android:icon="@drawable/ic_notification_count">
 
+    <!-- Alert Slider Notifications -->
+    <com.bliss.support.preferences.preferences.SystemSettingSwitchPreference
+        android:key="alert_slider_notifications"
+        android:icon="@drawable/ic_light_switch"
+        android:title="@string/alert_slider_notifications_title"
+        android:summary="@string/alert_slider_notifications_summary"
+        android:defaultValue="true" />
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="vibrate_on_notifications"
         android:title="@string/vibrate_on_notifications_title"
