--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -42,6 +42,13 @@
         android:key="aosp_themeing"
         android:title="@string/aosp_themeing_title">
 
+        <ListPreference
+            android:key="accent_preset"
+            android:title="@string/accent_preset_title"
+            android:persistent="false"
+            android:entries="@array/accent_presets_entries"
+            android:entryValues="@array/accent_presets_values" />
+
         <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="accent_color"
             android:title="@string/rgb_accenter_title"
