Blissify: Add RGB accent presets
* Using the values of our existing accent overlays

Change-Id: Id498812cd6941e88554fc62e0abc5ac9d6ae0afb

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1313,4 +1313,75 @@
     <!-- Rgb Accenter -->
     <string name="rgb_accenter_title">Rgb Accenter</string>
 
+    <!-- Accent presets -->
+    <string name="accent_preset_0">Bliss</string>
+    <string name="accent_preset_1">BlueMonday</string>
+    <string name="accent_preset_2">BubblegumPink</string>
+    <string name="accent_preset_3">BurningRed</string>
+    <string name="accent_preset_4">CandyRed</string>
+    <string name="accent_preset_5">ColdEveningBleu</string>
+    <string name="accent_preset_6">ColdSummerYellow</string>
+    <string name="accent_preset_7">DeadRed</string>
+    <string name="accent_preset_8">DeepOrange</string>
+    <string name="accent_preset_9">DeepPurple</string>
+    <string name="accent_preset_10">DiffDayGreen</string>
+    <string name="accent_preset_11">DreamyPurple</string>
+    <string name="accent_preset_12">DuskPurple</string>
+    <string name="accent_preset_13">ExtendedGreen</string>
+    <string name="accent_preset_14">Flare</string>
+    <string name="accent_preset_15">FootprintPurple</string>
+    <string name="accent_preset_16">FrenchBleu</string>
+    <string name="accent_preset_17">FromHell</string>
+    <string name="accent_preset_18">GoldenShower</string>
+    <string name="accent_preset_19">HazedPink</string>
+    <string name="accent_preset_21">HeirloomBleu</string>
+    <string name="accent_preset_22">Holillusion</string>
+    <string name="accent_preset_23">IllusionsPurple</string>
+    <string name="accent_preset_24">JadeGreen</string>
+    <string name="accent_preset_25">ManiaAmber</string>
+    <string name="accent_preset_26">MisticBrown</string>
+    <string name="accent_preset_27">MoveMint</string>
+    <string name="accent_preset_28">NewHouseOrange</string>
+    <string name="accent_preset_29">NotImpPurple</string>
+    <string name="accent_preset_30">ObfusBleu</string>
+    <string name="accent_preset_31">OrangeCoral</string>
+    <string name="accent_preset_32">PaleBlue</string>
+    <string name="accent_preset_33">PaleRed</string>
+    <string name="accent_preset_34">Pixel</string>
+    <string name="accent_preset_35">PureLust</string>
+    <string name="accent_preset_36">Quepal</string>
+    <string name="accent_preset_37">RottenOrange</string>
+    <string name="accent_preset_38">SeasideMint</string>
+    <string name="accent_preset_39">ShadesOfGrey</string>
+    <string name="accent_preset_40">SincityRed</string>
+    <string name="accent_preset_41">SluttyPink</string>
+    <string name="accent_preset_42">SmokingGreen</string>
+    <string name="accent_preset_43">SpokedPurple</string>
+    <string name="accent_preset_44">Sublime</string>
+    <string name="accent_preset_45">Teal</string>
+    <string name="accent_preset_46">TruFilPink</string>
+    <string name="accent_preset_47">WarmthOrange</string>
+    <string name="accent_preset_48">White</string>
+    <string name="accent_preset_49">ColorMint</string>
+    <string name="accent_preset_50">AndroidOneGreen</string>
+    <string name="accent_preset_51">AospaGreen</string>
+    <string name="accent_preset_52">CocaColaRed</string>
+    <string name="accent_preset_53">DiscordPurple</string>
+    <string name="accent_preset_54">FacebookBlue</string>
+    <string name="accent_preset_55">InstagramCerise</string>
+    <string name="accent_preset_56">JollibeeCrimson</string>
+    <string name="accent_preset_57">MonsterEnergyGreen</string>
+    <string name="accent_preset_58">NextbitMint</string>
+    <string name="accent_preset_59">OneplusRed</string>
+    <string name="accent_preset_60">PepsiBlue</string>
+    <string name="accent_preset_61">PocophoneYellow</string>
+    <string name="accent_preset_62">RazerGreen</string>
+    <string name="accent_preset_63">SamsungBlue</string>
+    <string name="accent_preset_64">SpotifyGreen</string>
+    <string name="accent_preset_65">StarbucksGreen</string>
+    <string name="accent_preset_66">TwitchPurple</string>
+    <string name="accent_preset_67">TwitterBlue</string>
+    <string name="accent_preset_68">XboxGreen</string>
+    <string name="accent_preset_69">XiaomiOrange</string>
+
 </resources>
