--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1307,4 +1307,90 @@
         <item>4</item>
         <item>5</item>
     </string-array>
+
+    <string-array name="accent_presets_entries" translatable="false">
+        <item>@string/default_string</item>
+        <item>@string/accent_preset_0</item>
+        <item>@string/accent_preset_1</item>
+        <item>@string/accent_preset_2</item>
+        <item>@string/accent_preset_3</item>
+        <item>@string/accent_preset_4</item>
+        <item>@string/accent_preset_5</item>
+        <item>@string/accent_preset_6</item>
+        <item>@string/accent_preset_7</item>
+        <item>@string/accent_preset_8</item>
+        <item>@string/accent_preset_9</item>
+        <item>@string/accent_preset_10</item>
+        <item>@string/accent_preset_11</item>
+        <item>@string/accent_preset_12</item>
+        <item>@string/accent_preset_13</item>
+        <item>@string/accent_preset_14</item>
+        <item>@string/accent_preset_15</item>
+        <item>@string/accent_preset_16</item>
+        <item>@string/accent_preset_17</item>
+        <item>@string/accent_preset_18</item>
+        <item>@string/accent_preset_19</item>
+        <item>@string/accent_preset_20</item>
+        <item>@string/accent_preset_21</item>
+        <item>@string/accent_preset_22</item>
+        <item>@string/accent_preset_23</item>
+        <item>@string/accent_preset_24</item>
+        <item>@string/accent_preset_25</item>
+        <item>@string/accent_preset_26</item>
+        <item>@string/accent_preset_27</item>
+        <item>@string/accent_preset_28</item>
+        <item>@string/accent_preset_29</item>
+        <item>@string/accent_preset_30</item>
+        <item>@string/accent_preset_31</item>
+        <item>@string/accent_preset_32</item>
+        <item>@string/accent_preset_33</item>
+        <item>@string/accent_preset_34</item>
+        <item>@string/accent_preset_35</item>
+        <item>@string/accent_preset_36</item>
+        <item>@string/accent_preset_37</item>
+    </string-array>
+
+    <string-array name="accent_presets_values" translatable="false">
+        <item>2980c7</item>
+        <item>abd3ff</item>
+        <item>e52c5f</item>
+        <item>f21a48</item>
+        <item>ff1744</item>
+        <item>2e86cd</item>
+        <item>d60000</item>
+        <item>ff9c0a</item>
+        <item>673AB7</item>
+        <item>97f456</item>
+        <item>7278e5</item>
+        <item>b7095a</item>
+        <item>21ef8b</item>
+        <item>f12711</item>
+        <item>3c5ae0</item>
+        <item>2856ff</item>
+        <item>f44336</item>
+        <item>f0b50b</item>
+        <item>c83c64</item>
+        <item>327ccb</item>
+        <item>0ac8ff</item>
+        <item>a02963</item>
+        <item>9ABC98</item>
+        <item>f6ca11</item>
+        <item>996644</item>
+        <item>46ff99</item>
+        <item>f25555</item>
+        <item>8522ff</item>
+        <item>0042ba</item>
+        <item>ff9966</item>
+        <item>a1b6ed</item>
+        <item>f05361</item>
+        <item>5e97f6</item>
+        <item>dd1818</item>
+        <item>11998e</item>
+        <item>f55600</item>
+        <item>01c18c</item>
+        <item>2c3e50</item>
+        <item></item>
+        <item></item>
+        <item></item>
+
 </resources>
