--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1299,4 +1299,6 @@
     <string name="fod_recog_animation_pureview_halo_ring">Halo Ring</string>
     <string name="fod_recog_animation_pureview_molecular">Molecular</string>
     <string name="fod_recog_animation_bluefirework">Blue Fireworks</string>
+    <string name="fod_recog_animation_coloros7_1">ColorOS7 1</string>
+    <string name="fod_recog_animation_coloros7_2">ColorOS7 2</string>
 </resources>
